# atenex_onprem

./: .gitignore  ALL_READMES.md  README.md  aggregate_all_codebases.py  aggregate_all_readmes.py  first-part.md  offline-guide.md  update_all_codebases.py
.github/workflows/: cicd.yml
api-gateway/: full_codebase.md  pyproject.toml
api-gateway/app/: main.py
api-gateway/app/auth/: auth_service.py
api-gateway/app/core/: config.py
docproc-service/: full_codebase.md
embedding-service/: full_codebase.md  pyproject.toml
embedding-service/app/: main.py
embedding-service/app/core/: config.py
ingest-service/: full_codebase.md  pyproject.toml  refactor.md
ingest-service/app/api/v1/: schemas.py
ingest-service/app/api/v1/endpoints/: ingest.py
ingest-service/app/core/: config.py
ingest-service/app/services/: ingest_pipeline.py  minio_client.py  text_processor.py
ingest-service/app/tasks/: process_document.py
query-service/: Dockerfile  README.md  analisis_prompts_gemini_2.5_flash.md  cleanup_milvus.py  full_codebase.md  pyproject.toml  query_service_analysis.md  refactor.md  refactor_plan.md  verify_changes.py  verify_config_types.py  verify_use_case.py
query-service/app/: dependencies.py  main.py
query-service/app/api/v1/: mappers.py  schemas.py
query-service/app/api/v1/endpoints/: chat.py  query.py
query-service/app/application/: __init__.py
query-service/app/application/ports/: __init__.py  embedding_port.py  llm_port.py  repository_ports.py  retrieval_ports.py  vector_store_port.py
query-service/app/application/services/: __init__.py  fusion_service.py
query-service/app/application/use_cases/: ask_query_use_case.py
query-service/app/application/use_cases/ask_query/: __init__.py  config_types.py  pipeline.py  prompt_service.py  steps.py  token_accountant.py  types.py
query-service/app/core/: config.py  logging_config.py
query-service/app/domain/: __init__.py  models.py
query-service/app/infrastructure/: __init__.py
query-service/app/infrastructure/clients/: __init__.py  embedding_service_client.py  sparse_search_service_client.py
query-service/app/infrastructure/embedding/: __init__.py  remote_embedding_adapter.py
query-service/app/infrastructure/filters/: __init__.py  diversity_filter.py
query-service/app/infrastructure/llms/: __init__.py  gemini_adapter.py  llama_cpp_adapter.py
query-service/app/infrastructure/persistence/: __init__.py  postgres_connector.py  postgres_repositories.py
query-service/app/infrastructure/retrievers/: remote_sparse_retriever_adapter.py
query-service/app/infrastructure/vectorstores/: milvus_adapter.py
query-service/app/prompts/: general_prompt_v3_flash.txt  general_template_gemini_v2.txt  general_template_granite.txt  map_prompt_template.txt  map_prompt_v3_flash.txt  rag_prompt_v3_flash.txt  rag_template_gemini_v2.txt  rag_template_granite.txt  reduce_prompt_template_v2.txt  reduce_prompt_v3_flash.txt
query-service/app/utils/: helpers.py
reranker-service/: Dockerfile  README.md  full_codebase.md  pyproject.toml
reranker-service/app/: dependencies.py  main.py
reranker-service/app/api/v1/: schemas.py
reranker-service/app/api/v1/endpoints/: rerank_endpoint.py
reranker-service/app/application/ports/: __init__.py  reranker_model_port.py
reranker-service/app/application/use_cases/: __init__.py  rerank_documents_use_case.py
reranker-service/app/core/: config.py  logging_config.py
reranker-service/app/domain/: models.py
reranker-service/app/infrastructure/rerankers/: __init__.py  sentence_transformer_adapter.py
sparse-search-service/: Dockerfile  README.md  full_codebase.md  pyproject.toml  refactor.md
sparse-search-service/app/: dependencies.py  gunicorn_conf.py  main.py
sparse-search-service/app/api/v1/: schemas.py
sparse-search-service/app/api/v1/endpoints/: search_endpoint.py
sparse-search-service/app/application/ports/: repository_ports.py  sparse_index_storage_port.py  sparse_search_port.py
sparse-search-service/app/application/use_cases/: load_and_search_index_use_case.py
sparse-search-service/app/core/: config.py  logging_config.py
sparse-search-service/app/domain/: models.py
sparse-search-service/app/infrastructure/cache/: index_lru_cache.py
sparse-search-service/app/infrastructure/persistence/: postgres_connector.py  postgres_repositories.py
sparse-search-service/app/infrastructure/sparse_retrieval/: bm25_adapter.py
sparse-search-service/app/infrastructure/storage/: gcs_index_storage_adapter.py  minio_index_storage_adapter.py
sparse-search-service/app/jobs/: index_builder_cronjob.py
