[tool.poetry]
name = "embedding-service"
version = "1.1.1"
description = "Atenex Embedding Service using FastAPI and choice of embedding models (OpenAI, Sentence Transformers)"
authors = ["Atenex Team <dev@atenex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
gunicorn = "^21.2.0" # For production deployments
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
tenacity = "^8.2.3"
numpy = "^1.26.0" # Añadido numpy como dependencia principal

# --- Embedding Engine ---
openai = "^1.14.0" # OpenAI Python client library


[tool.poetry.group.st] # Grupo opcional para Sentence Transformers
optional = true

[tool.poetry.group.st.dependencies]
sentence-transformers = "^2.7.0" 
# torch se instalará como dependencia de sentence-transformers si este grupo se incluye

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
httpx = "^0.27.0" # For testing the API client-side

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"