[tool.poetry]
name = "sparse-search-service"
version = "1.0.0" 
description = "Atenex Sparse Search Service using BM25 with precomputed GCS indexes."
authors = ["Atenex Backend Team <dev@atenex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
gunicorn = "^21.2.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
asyncpg = "^0.29.0"
rank_bm25 = "^0.2.2"
tenacity = "^8.2.3"
numpy = "1.26.4"
google-cloud-storage = "^2.16.0" 
cachetools = "^5.3.3"        


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
httpx = "^0.27.0" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"